2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_dp83902a.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/if_dp83902a.c: Use CYGINT_IO_ETH_INT_SUPPORT_REQUIRED instead
	of CYGPKG_NET where required.

2002-04-12  Gary Thomas  <gthomas@redhat.com>

	* src/if_dp83902a.c: Clean up warnings.

2002-03-28  Gary Thomas  <gthomas@redhat.com>

	* cdl/ns_dp83902a_eth_drivers.cdl: Fix spelling of _OPTIONS
	component as this is magic (CDL requires that it match the
	package or it is ignored).

2002-01-14  Jesper Skov  <jskov@redhat.com>

	* src/if_dp83902a.c (dp83902a_ClearCounters): Fix warning.

2001-12-10  Richard Sandiford  <rsandifo@redhat.com>

	* src/if_dp83902a.c (dp83902a_RxEvent): Remove unused argument.
	(dp83902a_TxEvent): Likewise.
	(dp83902a_BufEvent): Remove.
	(dp83902a_ClearCounters): New.
	(dp83902a_Overflow): New.
	(dp83902a_poll): Rework polling loop to use the new functions.

2001-10-16  Jesper Skov  <jskov@redhat.com>

	* include/dp83902a.h: Removed hardwired buffer
	allocation. Replaced with per-device configuration.
	* src/if_dp83902a.c: Same.

2001-10-15  Jesper Skov  <jskov@redhat.com>

	* include/dp83902a.h: Added new page allocation layout.

2001-10-12  Gary Thomas  <gthomas@redhat.com>

	* src/if_dp83902a.c: Leave out interrupt code - not needed in 
	non-NET configurations.

2001-10-10  Gary Thomas  <gthomas@redhat.com>

	* src/if_dp83902a.c: 
	* include/dp83902a.h: More flexible setup.  Chip reset address is
	now in device data, along with changes to the PLF reset functions.
	Also, a new PLF init function can be defined which allows the driver
	to work in a PCI enviroment (addresses unknown at compile time).

2001-09-12  Jesper Skov  <jskov@redhat.com>

	* src/if_dp83902a.c: Apply a little more DMA magic.

2001-08-25  Gary Thomas  <gthomas@redhat.com>
